[package]
name = "momostr"
version = "0.1.0"
edition = "2021"

[workspace]
default-members = ["."]
members = [".", "crates/*"]

[dependencies]
relay_pool = { path = "crates/relay_pool" }
html_to_md = { path = "crates/html_to_md" }
axum = "0.7.4"
axum-macros = "0.4.1"
axum-extra = { version="0.9.2", features=["json-deserializer"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0.196", features = ["derive", "rc"] }
anyhow = "1.0.79"
serde_json = "1.0.113"
regex = "1.10.3"
once_cell = "1.19.0"
nostr_lib = { version = "0.30.0", package = "nostr" }
rsa = "0.9.6"
sha3 = "0.10.8"
rand = "0.8.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
sha2 = "0.10.8"
sigh = "1.0.2"
reqwest = { version = "0.12.1", features = ["json"] }
httpdate = "1.0.3"
rustc-hash = "1.1.0"
linkify = "0.10.0"
futures-util = "0.3.30"
url = "2.5.0"
lru = "0.12.3"
mediatype = { version = "0.19.18", features = ["serde"] }
line-span = "0.1.5"
cached = "0.49.2"
chrono = { version="0.4.34", features = ["serde"] }
async-recursion = "1.0.5"
rocksdb = {version = "0.22.0", default-features = false }
dirs = "5.0.1"
rmp-serde = "1.1.2"
itertools = "0.12.1"
percent-encoding = "2.3.1"
tokio-tungstenite = "0.21.0"
html-escape = "0.2.13"
parking_lot = { version = "0.12.2", features = ["deadlock_detection"] }
