[package]
name = "json_sign"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa-signature-2017 = { git = "https://github.com/tesaguri/rsa-signature-2017-rs.git" }
json-syntax = { version = "0.9.6" }
locspan = { version = "0.7.16" }
json-ld = { version = "0.15.1" }
rdf-types = { version = "0.22.4" }
sophia_jsonld = { version = "0.8" }
sophia_iri = { version = "0.8", default-features = false }
sophia_inmem = "0.8"
sophia_api = { version = "0.8", default-features = false }
rsa = "0.9.6"
serde_json = "1.0.113"
