[package]
name = "relay_pool"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
lru = "0.12.2"
nostr = "0.31.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["default", "native-tls"] }
tracing = "0.1.40"
url = "2.5.0"
id-pool = { version = "0.2.2", features = ["u32"], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
itertools = "0.12.1"
rustc-hash = "1.1.0"
